Parent page styling

--- a/client/src/pages/SafeSupport.module.css
+++ b/client/src/pages/SafeSupport.module.css
@@ -28,6 +28,14 @@
   opacity: 0.9;
 }
 
+.heroTagline {
+  font-size: 1.5rem;
+  color: #FFFFFF;
+  font-style: italic;
+  opacity: 0.9;
+  margin: 0;
+}
+
 /* Content Sections */
 .content {
   background: var(--color-off-white);
@@ -138,6 +146,15 @@
 
 .collapseCard h3 {
   color: #FF3333;
+}
+
+.result {
+  font-weight: 700;
+  color: #FF3333;
+  margin-top: 1.5rem;
+  padding-top: 1rem;
+  border-top: 2px solid rgba(255, 51, 51, 0.2);
+  font-style: italic;
 }
 
 /* Module/Section Headers */
